@@ -26,7 +26,8 @@ TagCallContext::$supportedActions['delete'] = array(
 
         if( $object->countReferences() != 0 )
         {
-            PH::print_stdout( $context->padding . "  * SKIPPED: this object is used by other objects and cannot be deleted (use deleteForce to try anyway)" );
+            $string = "this object is used by other objects and cannot be deleted (use deleteForce to try anyway)";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );;
             return;
         }
         if( $context->isAPI )
@@ -42,7 +43,11 @@ TagCallContext::$supportedActions['deleteforce'] = array(
         $object = $context->object;
 
         if( $object->countReferences() != 0 )
-            PH::print_stdout( $context->padding . "  * WARNING : this object seems to be used so deletion may fail." );
+        {
+            $string = "this object seems to be used so deletion may fail.";
+            PH::ACTIONstatus( $context, "WARNING", $string );
+        }
+
         if( $context->isAPI )
             $object->owner->API_removeTag($object);
         else
@@ -59,14 +64,16 @@ TagCallContext::$supportedActions['name-addprefix'] = array(
 
         if( $object->isTmp() )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : not applicable to TMP objects" );
+            $string =  "not applicable to TMP objects";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
         PH::print_stdout( $context->padding . " - new name will be '{$newName}'" );
         if( strlen($newName) > 127 )
         {
-            PH::print_stdout( " *** SKIPPED : resulting name is too long" );
+            $string =  "resulting name is too long";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
         $rootObject = PH::findRootObjectOrDie($object->owner->owner);
@@ -74,7 +81,8 @@ TagCallContext::$supportedActions['name-addprefix'] = array(
         if( $rootObject->isPanorama() && $object->owner->find($newName, null, FALSE) !== null ||
             $rootObject->isFirewall() && $object->owner->find($newName, null, TRUE) !== null )
         {
-            PH::print_stdout( " *** SKIPPED : an object with same name already exists" );
+            $string =  "an object with same name already exists";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
         if( $context->isAPI )
@@ -94,14 +102,16 @@ TagCallContext::$supportedActions['name-addsuffix'] = array(
 
         if( $object->isTmp() )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : not applicable to TMP objects" );
+            $string = "not applicable to TMP objects";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
         PH::print_stdout( $context->padding . " - new name will be '{$newName}'" );
         if( strlen($newName) > 127 )
         {
-            PH::print_stdout( " *** SKIPPED : resulting name is too long" );
+            $string = "resulting name is too long";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
         $rootObject = PH::findRootObjectOrDie($object->owner->owner);
@@ -109,7 +119,8 @@ TagCallContext::$supportedActions['name-addsuffix'] = array(
         if( $rootObject->isPanorama() && $object->owner->find($newName, null, FALSE) !== null ||
             $rootObject->isFirewall() && $object->owner->find($newName, null, TRUE) !== null )
         {
-            PH::print_stdout( " *** SKIPPED : an object with same name already exists" );
+            $string = "an object with same name already exists";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
         if( $context->isAPI )
@@ -128,20 +139,23 @@ TagCallContext::$supportedActions['name-removeprefix'] = array(
 
         if( $object->isTmp() )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : not applicable to TMP objects" );
+            $string = "not applicable to TMP objects";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
         if( strpos($object->name(), $prefix) !== 0 )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : prefix not found" );
+            $string = "prefix not found";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
         $newName = substr($object->name(), strlen($prefix));
 
         if( !preg_match("/^[a-zA-Z0-9]/", $newName[0]) )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : object name contains not allowed character at the beginning" );
+            $string = "object name contains not allowed character at the beginning";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
@@ -152,7 +166,8 @@ TagCallContext::$supportedActions['name-removeprefix'] = array(
         if( $rootObject->isPanorama() && $object->owner->find($newName, null, FALSE) !== null ||
             $rootObject->isFirewall() && $object->owner->find($newName, null, TRUE) !== null )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : an object with same name already exists" );
+            $string = "an object with same name already exists";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
         if( $context->isAPI )
@@ -172,13 +187,15 @@ TagCallContext::$supportedActions['name-removesuffix'] = array(
 
         if( $object->isTmp() )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : not applicable to TMP objects" );
+            $string = "not applicable to TMP objects";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
         if( substr($object->name(), $suffixStartIndex, strlen($object->name())) != $suffix )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : suffix not found" );
+            $string =  "suffix not found";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
         $newName = substr($object->name(), 0, $suffixStartIndex);
@@ -190,7 +207,8 @@ TagCallContext::$supportedActions['name-removesuffix'] = array(
         if( $rootObject->isPanorama() && $object->owner->find($newName, null, FALSE) !== null ||
             $rootObject->isFirewall() && $object->owner->find($newName, null, TRUE) !== null )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : an object with same name already exists" );
+            $string = "an object with same name already exists";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
         if( $context->isAPI )
@@ -210,7 +228,8 @@ TagCallContext::$supportedActions['name-touppercase'] = array(
 
         if( $object->isTmp() )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : not applicable to TMP objects" );
+            $string = "not applicable to TMP objects";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
@@ -219,14 +238,16 @@ TagCallContext::$supportedActions['name-touppercase'] = array(
 
         if( $newName === $object->name() )
         {
-            PH::print_stdout( " *** SKIPPED : object is already uppercase" );
+            $string = "object is already uppercase";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
         if( $rootObject->isPanorama() && $object->owner->find($newName, null, FALSE) !== null ||
             $rootObject->isFirewall() && $object->owner->find($newName, null, TRUE) !== null )
         {
-            PH::print_stdout( " *** SKIPPED : an object with same name already exists" );
+            $string = "an object with same name already exists";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             #use existing uppercase TAG and replace old lowercase where used with this existing uppercase TAG
             return;
         }
@@ -246,7 +267,8 @@ TagCallContext::$supportedActions['name-tolowercase'] = array(
 
         if( $object->isTmp() )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : not applicable to TMP objects" );
+            $string = "not applicable to TMP objects";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
@@ -256,14 +278,16 @@ TagCallContext::$supportedActions['name-tolowercase'] = array(
 
         if( $newName === $object->name() )
         {
-            PH::print_stdout( " *** SKIPPED : object is already lowercase" );
+            $string = "object is already lowercase";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
         if( $rootObject->isPanorama() && $object->owner->find($newName, null, FALSE) !== null ||
             $rootObject->isFirewall() && $object->owner->find($newName, null, TRUE) !== null )
         {
-            PH::print_stdout( " *** SKIPPED : an object with same name already exists" );
+            $string = "an object with same name already exists";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             #use existing lowercase TAG and replace old uppercase where used with this
             return;
         }
@@ -284,7 +308,8 @@ TagCallContext::$supportedActions['name-toucwords'] = array(
 
         if( $object->isTmp() )
         {
-            PH::print_stdout( $context->padding . " *** SKIPPED : not applicable to TMP objects" );
+            $string = "not applicable to TMP objects";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
@@ -294,14 +319,16 @@ TagCallContext::$supportedActions['name-toucwords'] = array(
 
         if( $newName === $object->name() )
         {
-            PH::print_stdout( " *** SKIPPED : object is already UCword" );
+            $string = "object is already UCword";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
         if( $rootObject->isPanorama() && $object->owner->find($newName, null, FALSE) !== null ||
             $rootObject->isFirewall() && $object->owner->find($newName, null, TRUE) !== null )
         {
-            PH::print_stdout( " *** SKIPPED : an object with same name already exists" );
+            $string = "an object with same name already exists";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             #use existing lowercase TAG and replace old uppercase where used with this
             return;
         }
@@ -385,14 +412,6 @@ TagCallContext::$supportedActions[] = array(
     'MainFunction' => function (TagCallContext $context) {
         $object = $context->object;
 
-        /*
-        if( $object->isTmpAddr() )
-        {
-            PH::print_stdout( $context->padding." * SKIPPED this is a temporary object" );
-            return;
-        }
-        */
-
         $localLocation = 'shared';
 
         if( !$object->owner->owner->isPanorama() && !$object->owner->owner->isFirewall() )
@@ -403,7 +422,8 @@ TagCallContext::$supportedActions[] = array(
 
         if( $localLocation == $targetLocation )
         {
-            PH::print_stdout( $context->padding . " * SKIPPED because original and target destinations are the same: $targetLocation" );
+            $string = "because original and target destinations are the same: $targetLocation";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
@@ -441,7 +461,8 @@ TagCallContext::$supportedActions[] = array(
 
                     if( $skipped )
                     {
-                        PH::print_stdout( $context->padding . "   * SKIPPED : moving from SHARED to sub-level is NOT possible because of references" );
+                        $string = "moving from SHARED to sub-level is NOT possible because of references";
+                        PH::ACTIONstatus( $context, "SKIPPED", $string );
                         return;
                     }
                 }
@@ -452,12 +473,11 @@ TagCallContext::$supportedActions[] = array(
         {
             if( $context->baseObject->isFirewall() )
             {
-                PH::print_stdout( $context->padding . "   * SKIPPED : moving between VSYS is not supported" );
+                $string = "moving between VSYS is not supported";
+                PH::ACTIONstatus( $context, "SKIPPED", $string );
                 return;
             }
 
-            #PH::print_stdout( $context->padding."   * SKIPPED : moving between 2 VSYS/DG is not supported yet" );
-            #return;
             foreach( $object->getReferences() as $ref )
             {
                 if( PH::getLocationString($ref) != $targetLocation )
@@ -473,7 +493,8 @@ TagCallContext::$supportedActions[] = array(
 
                     if( $skipped )
                     {
-                        PH::print_stdout( $context->padding . "   * SKIPPED : moving between 2 VSYS/DG is not possible because of references on higher DG level" );
+                        $string = "moving between 2 VSYS/DG is not possible because of references on higher DG level";
+                        PH::ACTIONstatus( $context, "SKIPPED", $string );
                         return;
                     }
                 }
@@ -502,7 +523,8 @@ TagCallContext::$supportedActions[] = array(
 
         if( $context->arguments['mode'] == 'skipifconflict' )
         {
-            PH::print_stdout( $context->padding . "   * SKIPPED : there is an object with same name. Choose another mode to to resolve this conflict" );
+            $string = "there is an object with same name. Choose another mode to to resolve this conflict";
+            PH::ACTIONstatus( $context, "SKIPPED", $string );
             return;
         }
 
